# admin_template

./: AGENTS.md  README.md  codexid.txt  dev.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  menu.py  notice.py  user.py  ws_notice.py
backend/app/core/: config.py  database.py  security.py  seed.py
backend/app/middlewares/: __init__.py  audit.py
backend/app/models/: base.py  config.py  dept.py  dict.py  file.py  log.py  menu.py  notice.py  role.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  import_export.py  monitor_log.py  notice.py  response.py  system_config.py  system_dept.py  system_dict.py  system_file.py  system_menu.py  system_role.py  system_session.py  system_user.py  user.py
backend/app/services/: auth.py  data_scope.py  menu.py  session.py
backend/app/utils/: __init__.py  cache.py  excel.py  logger.py  user_agent.py
backend/app/ws/: __init__.py  notice.py
backend/migrations/models/: 0_20260113144934_init.py  10_20260129094810_add_file_storage.py  1_20260114110833_update.py  2_20260114150943_add_dept.py  3_20260114152632_add_user_management.py  4_20260115113734_add_user_profile_fields.py  5_20260115174019_add_notice.py  6_20260119150111_add_notice_publish_fields.py  7_20260123155220_add_dict_config_log.py  8_20260128162448_add_user_session.py  9_20260128171040_add_role_data_scope.py
docs/: 开发文档.md  (+1 more)
(+93 files in other folders)
